Fix z-index on handle

--- a/juxtapose/css/juxtapose.css
+++ b/juxtapose/css/juxtapose.css
@@ -16,7 +16,7 @@ div.jx-handle {
 	height: 100%;
 	width: 40px;
 	cursor: col-resize;
-	z-index: 10;
+	z-index: 15;
 	margin-left: -20px;
 }
 
